--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,20 @@ dev-dependencies = [
     "mypy>=1.11.2",
     "ruff>=0.6.9",
 ]
+
+[tool.ruff]
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = [
+    "ANN1",   # missing type self and cls
+    "E999",   # syntax error
+    "UP027",  # unpacked list comprehension
+    "PT004",  # pytest missing fixture name underscore
+    "PT005",  # pytest incorrect fixture name underscore
+    "D1",     # undocumented
+    "TD001",  # invalid todo tag
+    "TD002",  # missing todo author
+    "TD003",  # missing todo link
+]
