--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,14 @@ authors = [
 ]
 license = {text = "MIT License"}
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "mutagen>=1.47.0",
+]
 
 [tool.uv]
 dev-dependencies = [
     "mypy>=1.11.2",
+    "pytest>=8.3.3",
     "ruff>=0.6.9",
 ]
 
