--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "name": "Python デバッガー: モジュール",
             "type": "debugpy",
             "request": "launch",
-            "module": "mp3tag_writer"
+            "module": "mp3tag_writer",
+            "justMyCode": false
         }
     ]
 }
