テスト導入

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
 [tool.uv]
 dev-dependencies = [
     "mypy>=1.11.2",
+    "pytest-mock>=3.14.0",
     "pytest>=8.3.3",
     "ruff>=0.6.9",
 ]
