--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,4 +35,8 @@ ignore = [
     "TD001",  # invalid todo tag
     "TD002",  # missing todo author
     "TD003",  # missing todo link
+    "COM812", # missing trailing comma
 ]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
